an error in orthogonal transformation slide

--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -6220,8 +6220,8 @@ In&nbsp;[71]:
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="orthogonal-transformation">Orthogonal transformation</h2>
 <p>Orthogonal transformation is <strong>unconditionally stable</strong>:</p>
-<p>$$\Vert Q \boldsymbol u\Vert_2 = (Q \boldsymbol u)^T(Q \boldsymbol u) 
-= \boldsymbol u^T Q^TQ \boldsymbol u = \boldsymbol u^T \boldsymbol u =  \Vert \boldsymbol u \Vert_2$$</p>
+<p>$$\Vert Q \boldsymbol u\Vert_2^2 = (Q \boldsymbol u)^T(Q \boldsymbol u) 
+= \boldsymbol u^T Q^TQ \boldsymbol u = \boldsymbol u^T \boldsymbol u =  \Vert \boldsymbol u \Vert_2^2$$</p>
 <ul>
 <li>therefore by definition: $\Vert Q \Vert_2 = \Vert Q^{-1} \Vert_2 = 1$</li>
 <li>$k(Q) = \Vert Q \Vert_2 \Vert Q^{-1} \Vert_2 = 1$</li>
