lecture 1 exp(x) rewording

--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -3489,11 +3489,10 @@ b =  [ 0.          0.33333333]
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="a-more-realistic-example">A more realistic example</h2>
-<ul>
-<li>compute $e^x$ via Taylor expansion: </li>
-</ul>
+<h2 id="unexpected-twist">Unexpected twist</h2>
+<p>Compute $e^x$ via Taylor expansion: </p>
 <p>$$e^x = \sum_{n=0}^{\infty}\frac{x^n}{n!} = 1 + x + \frac{1}{2}x^2 + ...$$</p>
+<p>Other types of numerical error may disguise as floating point rounding error, thus hard to detect:</p>
 </div>
 </div>
 </div>
