--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -6248,6 +6248,7 @@ In&nbsp;[71]:
 <ul>
 <li>Bindel and Goodman: Problem 4.4, 4.7, 4.8</li>
 <li>Complete <a href="http://yadongli.github.io/nyumath2048">homework set 2</a></li>
+<li>Problem 2, 4, 5 in the homework set and 4.4, 4.7 from the book are optional.</li>
 </ul>
 </div>
 </div>
