fixed typo, extra credit to Xiashuai Huang

--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -1944,7 +1944,7 @@ a_{m1} &amp; a_{m2} &amp; . &amp; a_{mn}
 
 <p>$$\begin{array}
 \\ \bs u = A \bs v &amp;\iff u_i = \sum_{j=1}^{n} a_{ij}v_j \\
-C = AB &amp;\iff c_{ik} = \sum_{k=1}^{n} a_{ik}b_{kj} = a_i \cdot b_j
+C = AB &amp;\iff c_{ij} = \sum_{k=1}^{n} a_{ik}b_{kj} = a_i \cdot b_j
 \end{array}$$</p>
 </div>
 </div>
