Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <ul>
 <li><a href="https://github.com/yadongli/nyumath2048/blob/master/syllabus.pdf?raw=true">syllabus</a></li>
 <li>
-<a href="ClassPolicies.slides.html">class policies</a></li>
+<a href="ClassPolicies.slides.html">Class policies</a>.</li>
 </ul>
 
 <p>Lecture slides and homework will be published weekly before the Wednesday lecture. </p>
@@ -67,6 +67,12 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <td align="center">2. Linear Algebra I</td>
 <td align="center">
 <a href="Lecture2.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture2.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework2.ipynb">homework</a>
+</td>
+</tr>
+<tr>
+<td align="center">3. Linear Algebra II</td>
+<td align="center">
+<a href="Lecture3.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture3.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework3.ipynb">homework</a>
 </td>
 </tr>
 </tbody>
