--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -6321,7 +6321,7 @@ $$</p>
 <td style="text-align:center">Type</td>
 <td style="text-align:center">Real</td>
 <td style="text-align:center">Orthogonal, real</td>
-<td style="text-align:center">Diagonal, real</td>
+<td style="text-align:center">Diagonal, positive</td>
 <td style="text-align:center">Orthogonal, real</td>
 </tr>
 <tr>
