--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -2679,10 +2679,10 @@ $$</p>
 <ol>
 <li>1946, Monte Carlo</li>
 <li>1947, Simplex method for linear programming</li>
-<li>1950, Subspace iteration/conjugate gradient method for solving $A\bs x = \bs y$</li>
+<li>1950, Subspace iteration for solving $A\bs x = \bs y$</li>
 <li>1951, LU decomposition</li>
 <li>1957, Fortran optimized compiler</li>
-<li>1959-1961, QR decomposition/algorithm</li>
+<li>1959-1961, QR decomposition/QR algorithm</li>
 <li>1963, quicksort</li>
 <li>1965, fast fourier transform</li>
 <li>1977, integer relation detection algoirthm</li>
@@ -2690,19 +2690,16 @@ $$</p>
 </ol>
 </div>
 </div>
-</div><div class="fragment">
-    
+</div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Why-single-out-the-20th-century?">Why single out the 20th century?<a class="anchor-link" href="#Why-single-out-the-20th-century?">&#182;</a></h2>
+<p>Why single out the 20th century?</p>
 </div>
 </div>
-</div>
-
-    </div></section><section>
+</div></section><section>
     
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
