--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -6397,7 +6397,7 @@ M = U \Sigma V^T
 $$</p>
 <p>SVD and eigenvalue decomposition (EVD) are closely related to each other:</p>
 <ul>
-<li>SVD reduces to EVD if $M$ is SPD matrix</li>
+<li>SVD reduces to EVD if $M$ is symmetric positive definite</li>
 <li>$MM^T = U \Sigma V^T V \Sigma^T U^T = U \Sigma \Sigma^T U^T$:<ul>
 <li>the column vectors of $U$ are the eigen vectors of $MM^T$</li>
 </ul>
@@ -6552,7 +6552,7 @@ $$\begin{array}
 <th style="text-align:center">Applicability</th>
 <th style="text-align:center">Formula</th>
 <th style="text-align:center">Results</th>
-<th>Applications</th>
+<th>Key applications</th>
 </tr>
 </thead>
 <tbody>
@@ -6589,7 +6589,7 @@ $$\begin{array}
 <td style="text-align:center">any</td>
 <td style="text-align:center">$A = U\Sigma V^T$</td>
 <td style="text-align:center">orthogonal, positive diagonal, orthogonal</td>
-<td>error analysis</td>
+<td>error analysis, rank reduction</td>
 </tr>
 </tbody>
 </table>
