Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <a href="Lecture3.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture3.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework3.ipynb">homework</a>
 </td>
 </tr>
+<tr>
+<td align="center">4. Rootfinding and Interpolation</td>
+<td align="center">
+<a href="Lecture4.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture4.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework4.ipynb">homework</a>
+</td>
+</tr>
 </tbody>
 </table>
 
