--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -1746,7 +1746,7 @@ $(document).ready(function(){
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[37]:
+In&nbsp;[1]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -1771,16 +1771,6 @@ In&nbsp;[37]:
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>
 Populating the interactive namespace from numpy and matplotlib
-
-</pre>
-</div>
-</div>
-
-<div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_stream output_stderr output_text">
-<pre>
-WARNING: pylab import has clobbered these variables: [&apos;norm&apos;, &apos;axes&apos;, &apos;f&apos;, &apos;short&apos;, &apos;e&apos;]
-&#96;%matplotlib&#96; prevents importing * from pylab and numpy
 
 </pre>
 </div>
@@ -1860,7 +1850,7 @@ WARNING: pylab import has clobbered these variables: [&apos;norm&apos;, &apos;ax
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[38]:
+In&nbsp;[2]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2224,7 +2214,7 @@ zMxa8f9QEGVJyeVw5gAAAABJRU5ErkJggg==
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[39]:
+In&nbsp;[3]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2605,7 +2595,7 @@ LzYt2ynDkwGcAAAAAElFTkSuQmCC
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[40]:
+In&nbsp;[4]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -2926,7 +2916,7 @@ xRxfyMAAqQAAAABJRU5ErkJggg==
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[41]:
+In&nbsp;[5]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3241,7 +3231,7 @@ SAm4iIiIiEgaKQEXEREREUkjJeAiIiIiImmkBFxEREREJI2UgIuIiIiIpJEScBERERGRNPp/Lc+f
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[42]:
+In&nbsp;[6]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3591,7 +3581,7 @@ AABJRU5ErkJggg==
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[43]:
+In&nbsp;[7]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -3939,7 +3929,7 @@ gg==
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[44]:
+In&nbsp;[8]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -4238,7 +4228,7 @@ iIiISJaouBYRERERyRIV1yIiIiIiWaLiWkREREQkS1Rci4iIiIhkiYprEREREZEs+f+67if6QeB0
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[45]:
+In&nbsp;[9]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -4653,7 +4643,7 @@ IyIiIiJqlqY7IiIiIqJm/wXVLfcb+W/SlAAAAABJRU5ErkJggg==
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[46]:
+In&nbsp;[10]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -4883,7 +4873,7 @@ TiJmZlYyJxEzMyuZk4iZmZXMScTMzErmJGJmZiVzEjEzs5L9f+FbPyp78Rm5AAAAAElFTkSuQmCC
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[47]:
+In&nbsp;[11]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -5080,7 +5070,7 @@ YGaWcQ4CM7OMcxCYmWWcg8DMLOP+PxCdtaaO6p10AAAAAElFTkSuQmCC
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[48]:
+In&nbsp;[12]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -5349,7 +5339,7 @@ q''_i(x_i) &amp;=&amp; q''_{i+1}(x_i)
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[49]:
+In&nbsp;[13]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -5785,7 +5775,7 @@ $$</p>
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[50]:
+In&nbsp;[14]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -5853,7 +5843,7 @@ $$ f{\left (t \right )}=\frac{a + b t + c t^{2} + d t^{3}}{\lambda t \left(- t +
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[51]:
+In&nbsp;[15]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -5880,7 +5870,7 @@ In&nbsp;[51]:
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[52]:
+In&nbsp;[16]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -5953,7 +5943,7 @@ $$\small \left(\begin{matrix}f{\left (1 \right )}\\\dot{f}{\left (1 \right )}\\\
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[53]:
+In&nbsp;[17]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -6000,7 +5990,7 @@ $$\small \left(\begin{matrix}1 & 0 & 0 & 0\\1 & 1 & 1 & 1\\2 \lambda^{2} + 2 \la
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[76]:
+In&nbsp;[18]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -6079,7 +6069,7 @@ $$</p>
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[55]:
+In&nbsp;[19]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -6159,7 +6149,7 @@ $$ \;\;\;\;\;\;\; =- \frac{f{\left (x_{i} \right )}}{x_{i} - x_{{i-1}}} + \frac{
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[75]:
+In&nbsp;[20]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -6232,7 +6222,7 @@ $$\small \left(\begin{matrix}1.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0\\0.03 & 0.2
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[57]:
+In&nbsp;[21]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -6775,7 +6765,7 @@ EZEaUCEtIiIiIlID/x/HUpa5Wc2/KgAAAABJRU5ErkJggg==
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[58]:
+In&nbsp;[22]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -7525,7 +7515,7 @@ Lu7NzMzMzCrCxb2ZmZmZWUX8H/Ke+SznMnTKAAAAAElFTkSuQmCC
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[59]:
+In&nbsp;[23]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -7559,7 +7549,7 @@ In&nbsp;[59]:
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[60]:
+In&nbsp;[24]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -7711,7 +7701,7 @@ $$\small  c_{1}=\frac{c_{0} d}{\lambda} + c_{0} \left(b + c + d\right)\;,\;\;\;c
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[61]:
+In&nbsp;[25]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -8157,7 +8147,7 @@ uNibmZWAi72ZWQm42JuZlYCLvZlZCbjYm5mVgIu9mVkJ/Acj8zaPoRMLpAAAAABJRU5ErkJggg==
 <li>credit spread compress by 1bps</li>
 <li>positive deltas corresponds to long positions</li>
 </ul>
-<p>Often the risk computation is done by bumping rates +1bps, then flippng the signs before the final reporting.</p>
+<p>Often the risk computation is done by bumping rates +1bps, then flipping the signs before the final reporting.</p>
 </div>
 </div>
 </div></section><section>
@@ -8223,7 +8213,7 @@ uNibmZWAi72ZWQm42JuZlYCLvZlZCbjYm5mVgIu9mVkJ/Acj8zaPoRMLpAAAAABJRU5ErkJggg==
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[62]:
+In&nbsp;[26]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -8454,7 +8444,7 @@ In&nbsp;[62]:
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[63]:
+In&nbsp;[27]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -8759,7 +8749,7 @@ IpJo/x8tJcLfhBRw/QAAAABJRU5ErkJggg==
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[64]:
+In&nbsp;[28]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -8877,7 +8867,7 @@ In&nbsp;[64]:
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[65]:
+In&nbsp;[29]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -9417,7 +9407,7 @@ QP4fX7AdOXiRBSUAAAAASUVORK5CYII=
 <p>Tension spline interpolation is global:</p>
 <ul>
 <li>Changes in longer maturity affects the shorter end of the curve</li>
-<li>The benchmark instruments won&#39;t reprice exactly after the bootstrapping</li>
+<li>The benchmark CDS won&#39;t reprice exactly after the bootstrapping</li>
 </ul>
 </div>
 </div>
@@ -9426,7 +9416,7 @@ QP4fX7AdOXiRBSUAAAAASUVORK5CYII=
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[66]:
+In&nbsp;[30]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -9518,7 +9508,7 @@ In&nbsp;[66]:
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[80]:
+In&nbsp;[31]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -10176,7 +10166,7 @@ rMIYY4wxxhgPS46NMcYYY4zxsOTYGGOMMcYYD0uOjTHGGGOM8bDk2BhjjDHGGA9Ljo0xxhhjjPGw
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[68]:
+In&nbsp;[32]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -10200,7 +10190,7 @@ In&nbsp;[68]:
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[69]:
+In&nbsp;[33]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -10712,7 +10702,7 @@ ERGRiKaGWEREREQimhpiEREREYlo/w+bR7hW8lTciwAAAABJRU5ErkJggg==
 <h2 id="perturbation-locality">Perturbation locality</h2>
 <p>Changes in hazard rates are more localized with larger $\lambda$</p>
 <ul>
-<li>A highly desirable property in practice</li>
+<li>A highly sought after property in practice</li>
 </ul>
 </div>
 </div>
@@ -10721,7 +10711,7 @@ ERGRiKaGWEREREQimhpiEREREYlo/w+bR7hW8lTciwAAAABJRU5ErkJggg==
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[70]:
+In&nbsp;[34]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -11347,7 +11337,7 @@ AnMwHu9uAAAAAElFTkSuQmCC
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[71]:
+In&nbsp;[35]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -11945,7 +11935,7 @@ RK5CYII=
 <div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">
-In&nbsp;[72]:
+In&nbsp;[36]:
 </div>
 <div class="inner_cell">
     <div class="input_area">
@@ -12601,7 +12591,7 @@ McYYD/t/TBGCAPDwz1MAAAAASUVORK5CYII=
 <h2 id="state-variable">State variable</h2>
 <p>Generally, it is always better to interpolate the state variable:</p>
 <ul>
-<li>state variables&#39; is the primary determinant of price, such as the cumulative hazard $g(t) = -\log(p(t))$</li>
+<li>state variable is the primary determinant of price, such as the cumulative hazard $g(t) = -\log(p(t))$</li>
 <li>the derivatives, like $h(t) = g'(t)$, only changes the prices through its cumulative effects (integral), which leads to zigzags and waves when combined with a continuous interpolation.</li>
 </ul>
 </div>
@@ -12613,7 +12603,7 @@ McYYD/t/TBGCAPDwz1MAAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>interpolate derivatives + continuous interpolation algorithm = <strong>DISASTER</strong></p>
+<p>bootstrap derivatives + continuous interpolation = <strong>DISASTER</strong></p>
 </div>
 </div>
 </div>
