--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -5733,6 +5733,7 @@ $$</p>
 <ul>
 <li>$\delta(x)$ is the Dirac delta function, $\int_{-\infty}^{\infty} f(x) \delta(a) dx = f(a)$</li>
 <li>$p(x)$ is the probability density function of $s$</li>
+<li>the tranche example is concave because its payoff is $k - \mathbb{E}[\max(s-k, 0)]$</li>
 </ul>
 </div>
 </div>
