--- a/ClassPolicies.slides.html
+++ b/ClassPolicies.slides.html
@@ -1843,16 +1843,16 @@ $(document).ready(function(){
 <li>The project will be graded by tecnical merits <strong>and</strong> presentation skills and clarity, this is the base grade </li>
 <li>All team memebers receive the same base grade, </li>
 <li>A bonus credit of +40% of your base grade will be given to the team conditioned on that:<ol>
-<li>all four team members unanomously agree on every individuals&#39; contributions to this project</li>
+<li>all four team members unanimously agree on every individuals&#39; contributions to this project</li>
 <li>they acknowledge that contribution in the final presentation. </li>
 </ol>
 </li>
-<li>the bonus credit will be ditributed according to the unamomous percentage:<ul>
+<li>the bonus credit will be ditributed according to the unanimous percentage:<ul>
 <li>eg, if you received a score of 50 for your project, and you agreed that the four members&#39; contributions are [50%, 30%, 10%, 10%], then the bonus credits will 20, and team members receives [10, 6, 2, 2] bonus credit, and the final score will be [60, 56, 52, 52] for the four members. </li>
 <li>if the team is made up with more or less people, it only affects the distribution but not the team&#39;s total bonus</li>
 </ul>
 </li>
-<li>if team members cannot unanomously agree on the contribution percentages, then no one receives any bonus credit.</li>
+<li>if team members cannot unanimously agree on the contribution percentages, then no one receives any bonus credit.</li>
 <li>this rule is designed to encourage participation, and reward those who do more work in the project<ul>
 <li>it is suggested to divide the project into smaller pieces and agree on the contribution of each parts, then if a team member failed to deliver his/her part, then he/she has to relinquish the contribution to whoever picks up the work.</li>
 </ul>
