--- a/Lecture5.slides.html
+++ b/Lecture5.slides.html
@@ -2655,7 +2655,7 @@ In&nbsp;[5]:
 <p>At its core, it is simply a change in the liquid benchmark instruments.</p>
 <ul>
 <li>the quoting convention change is a side product</li>
-<li>ISDA publishes a one-day-lagged IR curve for the conversion of quoted spreads to PV, to ensure that the quoted spreads and standardised CDS PV has one-to-one dependency</li>
+<li>ISDA publishes a one-day-lagged IR curve for the conversion of quoted spreads to PV, to ensure that the standardised CDS PV is solely determined by the corresponding quoted spread.</li>
 </ul>
 </div>
 </div>
