--- a/Lecture5.slides.html
+++ b/Lecture5.slides.html
@@ -2206,7 +2206,7 @@ $$</p>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="diagonality">Diagonality</h2>
-<p>The benchmark Jacobian is diagonal if the relationship btw $\bs b$ and $\bs q$ is one to one</p>
+<p>The benchmark Jacobian is diagonal if the dependency btw $\bs b$ and $\bs q$ is one to one</p>
 <ul>
 <li>Jacobian $\frac{\partial v}{\partial \bs q}$ requires other elements of $\bs q$ remain constant when perturbing one of them</li>
 <li>other benchmark PVs remain unchanged because their $\bs q$ are hold constant</li>
