--- a/Lecture5.slides.html
+++ b/Lecture5.slides.html
@@ -2214,7 +2214,7 @@ $$</p>
 <p>The $\bs b$ and $\bs q$ are not always one-to-one</p>
 <ul>
 <li>eg, option price depends on both IR and implied vol</li>
-<li>the benchmark quote is not diagonal in this calse</li>
+<li>the benchmark quote is not diagonal in this case</li>
 </ul>
 <p>The benchmark Jacobian is diagonal in our example</p>
 <ul>
@@ -3814,7 +3814,7 @@ JVJ^T \bs h = J V \bs d \\
 <li>Our bank&#39;s system only computes risks to par CDS spreads, but the hedging instruments are the standardised CDS</li>
 <li>The bespoke trade is long $10MM, 4.5Y and 500bps</li>
 </ul>
-<p>The Jacobian $J = \frac{\partial \bs u}{\partial \bs q}$ is:</p>
+<p>The Jacobian $J = \frac{\partial \bs u}{\partial \bs p}$ is:</p>
 </div>
 </div>
 </div>
