Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <ul>
 <li><a href="https://github.com/yadongli/nyumath2048/blob/master/syllabus.pdf?raw=true">syllabus</a></li>
 <li>
-<a href="ClassPolicies.slides.html">Class policies</a>.</li>
+<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/ClassPolicy.ipynb">class policies</a>.</li>
 </ul>
 
 <p>Lecture slides and homework will be published weekly before the Wednesday lecture. </p>
