Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <ul>
 <li><a href="https://github.com/yadongli/nyumath2048/blob/master/syllabus.pdf?raw=true">syllabus</a></li>
 <li>
-<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/ClassPolicies.ipynb">class policies</a>.</li>
+<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/ClassPolicy.ipynb">class policies</a>.</li>
 </ul>
 
 <p>Lecture slides and homework will be published weekly before the Wednesday lecture. </p>
@@ -85,6 +85,12 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <td align="center">5. Deltas and Hedging</td>
 <td align="center">
 <a href="Lecture5.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture5.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework5.ipynb">homework</a>
+</td>
+</tr>
+<tr>
+<td align="center">5. Monte Carlo</td>
+<td align="center">
+<a href="Lecture5.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture6.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework6.ipynb">homework</a>
 </td>
 </tr>
 </tbody>
