--- a/Lecture6.slides.html
+++ b/Lecture6.slides.html
@@ -3363,26 +3363,26 @@ In&nbsp;[111]:
 <tr>
 <td style="text-align:center">1</td>
 <td style="text-align:center">$100$</td>
-<td style="text-align:center">$100^{3.5} = 10^7$</td>
-<td style="text-align:center">$10^5$</td>
+<td style="text-align:center">$10^{16} $</td>
+<td style="text-align:center">$10^{14}$</td>
 </tr>
 <tr>
-<td style="text-align:center">2</td>
-<td style="text-align:center">$100^2$</td>
-<td style="text-align:center">$10^7$</td>
-<td style="text-align:center">$1000$</td>
-</tr>
-<tr>
-<td style="text-align:center">4</td>
-<td style="text-align:center">$100^4$</td>
-<td style="text-align:center">$10^7$</td>
-<td style="text-align:center">$0.1$</td>
+<td style="text-align:center">5</td>
+<td style="text-align:center">$100^5$</td>
+<td style="text-align:center">$10^{16}$</td>
+<td style="text-align:center">$10^6$</td>
 </tr>
 <tr>
 <td style="text-align:center">10</td>
 <td style="text-align:center">$100^{10}$</td>
-<td style="text-align:center">$10^7$</td>
-<td style="text-align:center">$10^{-13}$</td>
+<td style="text-align:center">$10^{16}$</td>
+<td style="text-align:center">$0.001$</td>
+</tr>
+<tr>
+<td style="text-align:center">20</td>
+<td style="text-align:center">$100^{20}$</td>
+<td style="text-align:center">$10^{16}$</td>
+<td style="text-align:center">$10^{-34}$</td>
 </tr>
 </tbody>
 </table>
@@ -4051,7 +4051,7 @@ $$</p>
 <li>is the accuracy in the distribution of $s(t)$ at a specific $t$:</li>
 <li>a discretization has n-th order weak convergence if</li>
 </ul>
-<p>$$\mathbb{E}[f(s(t)) - f(\hat s(t; \delta))] = O(\delta^n)$$</p>
+<p>$$\mathbb{E}[s(t) - \hat s(t; \delta)] = O(\delta^n)$$</p>
 <h4 id="strong-convergence-">Strong convergence:</h4>
 <ul>
 <li>defined to be the accuracy in capturing the whole trajectory of $\bs s$:</li>
