corrected typo, credit to zhongrun zhu

--- a/Lecture6.slides.html
+++ b/Lecture6.slides.html
@@ -4205,7 +4205,7 @@ $$\small x(t) = x(t_0)e^{-\kappa (t-t_0)} + \bar x (1 - e^{-\kappa (t-t_0)}) + \
 <p>$$\small \begin{array}
 \\ dx(t) &amp;= \kappa(\bar x - x(t)) dt + \sigma dw(t) \\
 x(t_{i+1}) &amp;= x(t_i) + \kappa(\bar x - x(t_i)) \delta + \sqrt{\delta} \sigma \epsilon_i \\
-&amp;= (1 - \kappa \delta) x(t_i) + \kappa \bar x \delta + \sqrt{\delta t} \sigma \epsilon_i \\
+&amp;= (1 - \kappa \delta) x(t_i) + \kappa \bar x \delta + \sqrt{\delta} \sigma \epsilon_i \\
 \mathbb{E}[x(t_{i+1})] &amp;= (1 - \kappa \delta) \mathbb{E}[x(t_i)] + \kappa \bar x \delta
 \end{array}$$</p>
 <p>the expectation explodes if the $| 1 - \kappa \delta | &gt; 1$, i.e., $\delta &gt; \frac{2}{\kappa}$</p>
