Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <a href="Lecture6.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture6.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework6.ipynb">homework</a>
 </td>
 </tr>
+<tr>
+<td align="center">7. Variance Reduction</td>
+<td align="center">
+<a href="Lecture7.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture7.ipynb">ipynb</a>), no homework</td>
+</tr>
 </tbody>
 </table>
 
