--- a/Lecture7.slides.html
+++ b/Lecture7.slides.html
@@ -6242,6 +6242,7 @@ Zg04UDQzMzMzM7MG/h/9gvKzRyRz0wAAAABJRU5ErkJggg==
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
 <li>a shift of $\tilde m$ around -1.5 gives the most variance reduction</li>
+<li>here we followed the convesion that negative $\tilde m$ means to more defaults</li>
 </ul>
 </div>
 </div>
